busaa recipe added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
             <img src="ugali omena.jpeg" height="200" width="400" alt=" Ugali omena pictures"> 
         </h1>
         <p align="center"> 
-            <a href="recipes/ugali.html" target="_blank">Marinated Omena stew with Ugali for 3 people </a>
+            <a href="recipes/ugali.html" target="_blank">Marinated Omena stew with Ugali for 3 people </a> <br> </p>
+        <p align="center">
+            <img src="./recipes/Busaa.jpg" height="150" width="200" alt=" Fermented corn for Busaa preparation"> 
+            <img src="./recipes/busaadrink.jpeg" height="150" width="250" alt=" Busaa drink"><br>
+            <a href="recipes/Busaa.html" target="_blank"> Local African Brew "Busaa"</a>
         </p>
     </body>
 </html>
